[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rosmetasys"
version = "1.0.2"
authors = [
  { name="Valentin Schröter", email="valentin.schroeter@student.hpi.uni-potsdam.de" },
]
description = "Commandline tool to export the meta information of a ROS package."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'click-aliases',
  'click',
  'InquirerPy',
  'rich',
]

[project.urls]
Homepage = "https://github.com/vschroeter/rosmetasys"
Issues = "https://github.com/vschroeter/rosmetasys/issues"

[project.scripts]
rosmetasys = "rosmetasys.cli:cli"
